--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,9 @@
     "dev": "nodemon src/server.js",
     "create-db": "node src/scripts/createDatabase.js",
     "setup-db": "node src/scripts/setupDatabase.js",
+    "insert-menus": "node src/scripts/insertInitialMenus.js",
+    "update-menu-names": "node src/scripts/updateMenuNames.js",
+    "crawl-menus": "node src/scripts/crawlMenuList.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -19,9 +22,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "pg": "^8.11.3"
   },
   "devDependencies": {
